@@ -15,10 +15,23 @@
 #endif
 
 #if VALGRIND_ENABLED
+#ifndef VG_PMEMCHECK_ENABLED
 #define VG_PMEMCHECK_ENABLED 1
+#endif
+#ifndef VG_HELGRIND_ENABLED
 #define VG_HELGRIND_ENABLED 1
+#endif
+#ifndef VG_MEMCHECK_ENABLED
 #define VG_MEMCHECK_ENABLED 1
+#endif
+#ifndef VG_DRD_ENABLED
 #define VG_DRD_ENABLED 1
+#endif
+#else
+#define VG_PMEMCHECK_ENABLED 0
+#define VG_HELGRIND_ENABLED 0
+#define VG_MEMCHECK_ENABLED 0
+#define VG_DRD_ENABLED 0
 #endif
 
 #if VG_PMEMCHECK_ENABLED || VG_HELGRIND_ENABLED || VG_MEMCHECK_ENABLED || \
